# Nobela

./: Cargo.toml  README.md  characters.json
src/: character.rs  lib.rs  main.rs  nobela.pest  parser.rs  server.rs  test.rs
test_files/group/: nested.nobela
